<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnhist"
        android:layout_width="138dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="496dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="3dp"
        android:backgroundTint="#2C112E"
        android:fontFamily="@font/ravi_prakash"
        android:text="@string/btnHistoria"
        android:textColor="#FFF7F7"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBoss"
        app:layout_constraintEnd_toStartOf="@+id/btnperso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/btnperso"
        android:layout_width="139dp"
        android:layout_height="60dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="34dp"
        android:backgroundTint="#2C112E"
        android:fontFamily="@font/ravi_prakash"
        android:text="@string/btnPersonagens"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bntPlaylist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnhist"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints,UnknownId" />

    <Button
        android:id="@+id/btnBoss"
        android:layout_width="138dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="3dp"
        android:backgroundTint="#2C112E"
        android:fontFamily="@font/ravi_prakash"
        android:text="@string/btnBoss"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEasterEgg"
        app:layout_constraintEnd_toStartOf="@+id/bntPlaylist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnhist"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/bntPlaylist"
        android:layout_width="138dp"
        android:layout_height="60dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#2C112E"
        android:fontFamily="@font/ravi_prakash"
        android:text="@string/btnPlaylist"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEasterEgg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBoss"
        app:layout_constraintTop_toBottomOf="@+id/btnperso"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/btnEasterEgg"
        android:layout_width="138dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="29dp"
        android:backgroundTint="#2C112E"
        android:fontFamily="@font/ravi_prakash"
        android:text="@string/btnEasterEgg"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRedesSociais"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBoss"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/btnRedesSociais"
        android:layout_width="138dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="29dp"
        android:backgroundTint="#2C112E"
        android:fontFamily="@font/ravi_prakash"
        android:text="@string/btnRedesSociais"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEasterEgg"
        app:layout_constraintTop_toBottomOf="@+id/bntPlaylist"
        tools:ignore="HardcodedText,MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>